--- a/index.html
+++ b/index.html
@@ -1,57 +1,139 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的个人网页</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>我的个人主页</title>
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #1a1a2e;
-            color: #ffffff;
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', system-ui, sans-serif;
+            background: #0f0f1b;
+            color: #e0e0ff;
+            min-height: 100vh;
+            padding: 40px 20px;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
-            height: 100vh;
         }
-        .container {
+
+        header {
             text-align: center;
-            background: rgba(255, 255, 255, 0.05);
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-            padding: 40px;
-            backdrop-filter: blur(10px);
+            margin-bottom: 40px;
+            max-width: 800px;
         }
+
         h1 {
-            font-size: 2.5em;
-            color: #ff6f61;
+            font-size: 2.8rem;
+            background: linear-gradient(90deg, #00f0ff, #ff2a6d);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+            margin-bottom: 12px;
         }
-        p {
-            font-size: 1.2em;
-            margin-top: 15px;
+
+        .subtitle {
+            font-size: 1.1rem;
+            opacity: 0.8;
+        }
+
+        .cards-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 24px;
+            width: 100%;
+            max-width: 1000px;
+        }
+
+        .card {
+            background: rgba(30, 30, 50, 0.6);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(100, 100, 255, 0.2);
+            border-radius: 16px;
+            padding: 24px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            cursor: default;
+        }
+
+        .card:hover {
+            transform: translateY(-6px);
+            box-shadow: 0 8px 24px rgba(0, 240, 255, 0.15);
+        }
+
+        .card h2 {
+            color: #00f0ff;
+            margin-bottom: 16px;
+            font-size: 1.4rem;
+        }
+
+        .card p {
             line-height: 1.6;
+            font-size: 1rem;
         }
-        a {
-            color: #6dd3d6;
+
+        .card a {
+            color: #ff2a6d;
             text-decoration: none;
             font-weight: bold;
-            transition: color 0.3s ease;
+            margin-top: 10px;
+            display: inline-block;
         }
-        a:hover {
-            color: #ff6f61;
+
+        .card a:hover {
+            text-decoration: underline;
+        }
+
+        footer {
+            margin-top: 60px;
+            text-align: center;
+            font-size: 0.9rem;
+            opacity: 0.6;
         }
     </style>
 </head>
 <body>
 
-<div class="container">
-    <h1>欢迎来到我的个人空间</h1>
-    <p>这里是我分享我的项目、经验和想法的地方。</p>
-    <p>探索更多关于我的信息，或者通过下方链接联系我：</p>
-    <a href="#contact">联系我</a>
-</div>
+    <header>
+        <h1>张三的数字空间</h1>
+        <p class="subtitle">探索 · 创造 · 分享</p>
+    </header>
+
+    <div class="cards-container">
+        <!-- 卡片 1：关于我 -->
+        <div class="card">
+            <h2>关于我</h2>
+            <p>你好！我是一名前端开发者，热爱构建简洁而强大的用户界面。喜欢开源、AI 和一切有创造力的事物。</p>
+        </div>
+
+        <!-- 卡片 2：项目 -->
+        <div class="card">
+            <h2>我的项目</h2>
+            <p>正在开发多个 Web 应用，涵盖工具类、数据可视化和交互实验。</p>
+            <a href="#projects">查看项目 →</a>
+        </div>
+
+        <!-- 卡片 3：技能 -->
+        <div class="card">
+            <h2>技术栈</h2>
+            <p>HTML/CSS/JavaScript · React · Vue · Node.js · Python · Git</p>
+        </div>
+
+        <!-- 卡片 4：联系我 -->
+        <div class="card" id="contact">
+            <h2>联系我</h2>
+            <p>欢迎通过邮箱或社交平台与我交流！</p>
+            <a href="mailto:yourname@example.com">发送邮件</a>
+        </div>
+    </div>
+
+    <footer>
+        © 2025 张三 | 个人主页
+    </footer>
 
 </body>
 </html>
