--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <body>
 
     <header>
-        <h1>张三的数字空间</h1>
+        <h1>斜阳不知归的数字空间</h1>
         <p class="subtitle">探索 · 创造 · 分享</p>
     </header>
 
@@ -107,20 +107,20 @@
         <!-- 卡片 1：关于我 -->
         <div class="card">
             <h2>关于我</h2>
-            <p>你好！我是一名前端开发者，热爱构建简洁而强大的用户界面。喜欢开源、AI 和一切有创造力的事物。</p>
+            <p>你好！我是一名算法科技爱好者，分享热爱的一切。</p>
         </div>
 
         <!-- 卡片 2：项目 -->
         <div class="card">
             <h2>我的项目</h2>
-            <p>正在开发多个 Web 应用，涵盖工具类、数据可视化和交互实验。</p>
+            <p>正在开发多个算法应用，涵盖工具类、数据可视化和交互实验。</p>
             <a href="#projects">查看项目 →</a>
         </div>
 
         <!-- 卡片 3：技能 -->
         <div class="card">
             <h2>技术栈</h2>
-            <p>HTML/CSS/JavaScript · React · Vue · Node.js · Python · Git</p>
+            <p>HTML/CSS/JavaScript  · Node.js · Python · Matlab</p>
         </div>
 
         <!-- 卡片 4：联系我 -->
@@ -132,10 +132,8 @@
     </div>
 
     <footer>
-        © 2025 张三 | 个人主页
+        © 2025 斜阳不知归 | 个人主页
     </footer>
 
 </body>
 </html>
-
-
