--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="card" id="contact">
             <h2>联系我</h2>
             <p>欢迎通过邮箱或社交平台与我交流！</p>
-            <a href="mailto:yourname@example.com">发送邮件</a>
+            <a href="https://space.bilibili.com/382738043">进入我的B站主页</a>
         </div>
     </div>
 
